--- a/introduction.tex
+++ b/introduction.tex
@@ -17,12 +17,12 @@ Although the quality of ASR systems is improving,
   these systems are still far from perfect.
 One of the reasons is that the quality of ASR systems depends heavily on the amount of the training data,
   and there is not enough publicly available transcribed speech data for all languages.
-By providing free ASR web service it is possible to collect vasts amount of recordings
+By providing free ASR web service it is possible to collect vast amounts of recordings
   that can be manually transcribed.
-Consequently, \textbf{the second goal of the present thesis is to create an annotation interface}
+Therefore, \textbf{the second goal of the present thesis is to create an annotation interface}
   so that recordings obtained by CloudASR platform can be annotated and given back to the community.
 
-The following text development and deployment of CloudASR platform and its annotation interface are described.
+In the following text development and deployment of CloudASR platform and its annotation interface are described.
 Chapter~1 introduces Automatic Speech Recognition theory and tools related to CloudASR.
 In Chapter~2, tools used for CloudASR development and deployment are presented.
 The implementation of CloudASR platform is described in Chapter~3.
