--- a/solution.tex
+++ b/solution.tex
@@ -159,7 +159,7 @@ It has two modes, namely, dictation mode, which only shows the best transcriptio
   \centering
   \includegraphics[width=0.95\textwidth]{./img/demo.pdf}
 
-  \caption{Screen of the Web Demo}
+  \caption{Screen of the Web Demo.}
   \label{fig:webdemo}
 \end{figure}
 
@@ -183,7 +183,7 @@ This allows to collect transcriptions for all recordings uniformly
   \centering
   \includegraphics[width=0.95\textwidth]{./img/annotation.pdf}
 
-  \caption{Screen of the Annotation Interface}
+  \caption{Screen of the Annotation Interface.}
   \label{fig:annotation-interface}
 \end{figure}
 
