--- a/technologies.tex
+++ b/technologies.tex
@@ -1,6 +1,6 @@
 \chapter{Used Technologies}\label{sec:technologies}
 In this chapter technologies that were used during development will be described.
-Also the motivation for the usage of these technologies will be explained.
+Also, the motivation for the usage of these technologies will be explained.
 
 \section{Platform}
 In the following section technologies that were used to build a cloud platform will be described.
@@ -159,7 +159,7 @@ The frontend uses several well-known open-source libraries, namely,
   \centering
   \includegraphics[width=0.95\textwidth]{./img/demo.pdf}
 
-  \caption{Screen of the Web Demo}
+  \caption{Screen of the Web Demo.}
   \label{fig:demo}
 \end{figure}
 
