--- a/asr.tex
+++ b/asr.tex
@@ -114,9 +114,9 @@ For instance, the recurrent neural network based language models yielded state-o
 Speech decoding is used to find the most likely word sequence $\widehat{W}$ using the Equation~\ref{eq:asr}.
 Because the space of all word sequences is astronomically large, the search cannot be done by brute force.
 
-One of the algorithm that can be used for speech decoding is the Viterbi algorithm \cite{forney1973viterbi}.
+One of the algorithms that can be used for speech decoding is the Viterbi algorithm \cite{forney1973viterbi}.
 It is a dynamic programming algorithm for finding the most likely sequence of hidden states in HMMs.
-Even though it is not guaranteed that this algorithm will find the most likely word sequence $\widehat{W}$,
+Even though, it is not guaranteed that this algorithm will find the most likely word sequence $\widehat{W}$,
   it achieves very good results.
 
 Viterbi algorithm has a problem with large vocabularies,
@@ -129,14 +129,14 @@ Or a combination of these two methods can be used.
 
 
 \subsection{Evaluation}
-\textbf{Word error rate (WER)} is the most common metrics used to evaluate the performance of ASR systems.
+\textbf{Word error rate (WER)} is the most common metric used to evaluate the performance of ASR systems.
 It is computed as a minimum edit distance on words between one-best ASR output and a reference transcription divided by the number of words in the reference transcription.
 
 \begin{equation}
   WER = \frac{S + D + I}{N}
 \end{equation}
 
-where:
+Where:
 \begin{itemize}
   \item S is the number of substitutions,
   \item D is the number of deletions,
@@ -159,7 +159,7 @@ There are several ways how to implement VAD,
   for example, support vector machines \cite{mesgarani2006discrimination}, gaussian mixture models \cite{ng2012developing} or deep neural networks (DNN) \cite{ryant2013speech} can be used.
 The last one, using deep neural networks, will be described here.
 
-The VAD using deep neural networks starts by extracting features every 10ms from a 25 ms analysis window.
+The VAD using deep neural networks starts by extracting features every 10~ms from a 25~ms analysis window.
 These features are then normalized and concatenated to a feature vector,
   which is used as an input to the DNN.
 The DNN then returns the posterior probability of speech being present in the analysis windows.
@@ -184,7 +184,7 @@ And it uses Hidden Markov Model (HMM) as an acoustic model
 Julius can be also used with models trained for HTK toolkit.
 
 Next described toolkit is \textbf{Kaldi} \cite{povey2011kaldi} -- a free, open-source toolkit for speech recognition written in C++.
-Its speech recognition system is based on finite-state transducers
+Its speech recognition system is based on\linebreak finite--state transducers
   and it supports modelling of arbitrary phonetic-context sizes,
   acoustic modelling with subspace Gaussian mixture models (SGMM)
   as well as standard Gaussian mixture models and deep neural networks,
@@ -258,6 +258,6 @@ Recently, it was shown that crowd-sourcing can be used for cheap, fast and good 
 With crowd-sourcing, speech data is split into small chunks that are then transcribed by several non-professional transcribers.
 Their transcriptions are then used to select the best transcription for the recording, for example with ROVER algorithm \cite{marge2010using}, and used for training of new ASR systems.
 Also, transcriptions from non-professional transcribers are only $6\%$ worse than professional transcriptions
-  and they cost only $\frac{1}{30}$ of the cost of professional transcription.
+  and they cost only $\frac{1}{30}$ of the cost of professional transcription \cite{novotney2010cheap}.
 Finally, services like \textbf{Amazon Mechanical Turk}\footnote{\url{https://www.mturk.com}}
   or \textbf{CrowdFlower}\footnote{\url{http://www.crowdflower.com/}} already support the speech transcription tasks.
