--- a/asr.tex
+++ b/asr.tex
@@ -252,7 +252,7 @@ It supports 11 languages via an API similar to Google Speech API, see Figure~\re
 A large amount of transcribed recordings is needed in order to train a good ASR system.
 But a manual transcription of the recordings by professional transcribers is expensive and time demanding,
   typically, professional transcribers need 6 hours to transcribe 1 hour of speech data \cite{williams2011crowd}.
-Furthermore, it is difficult to find enough professional transcribers to transcribe the required amount of speech data in short time.
+Furthermore, it is difficult to find enough professional transcribers to transcribe the required amount of speech data in a short time.
 
 Recently, it was shown that crowd-sourcing can be used for cheap, fast and good enough manual transcription of speech data \cite{novotney2010cheap}.
 With crowd-sourcing, speech data is split into small chunks that are then transcribed by several non-professional transcribers.
