--- a/conclusion.tex
+++ b/conclusion.tex
@@ -58,7 +58,7 @@ Additionally, external service, such as CrowdFlower, can be used to obtain manua
     With manually transcribed recordings from CloudASR platform
       it is possible to continuously improve the accuracy of the underlying ASR system
       by adapting the language model to the type of language that the users of the CloudASR really use.
-    Thus CloudASR could provide an option to automatically update language model
+    Thus, CloudASR could provide an option to automatically update language model
       when a certain amount of new transcribed recordings was collected.
 
   \item
