--- a/technologies.tex
+++ b/technologies.tex
@@ -80,7 +80,7 @@ The most important tool for Continuous Integration \& Delivery of CloudASR is Je
 Its task is to watch CloudASR git repository
   and whenever a new code is pushed into this repository it schedules a new build of the platform.
 During this build, the most recent code is pulled from the repository and then the new docker images are built.
-After that tests are run to check that the new code did not break anything.
+After that, tests are run to check that the new code did not break anything.
 Finally, successfully built images are tagged with current build number and pushed to the Docker Registry.
 
 
