--- a/thesis.tex
+++ b/thesis.tex
@@ -202,10 +202,10 @@ Mgr. Ing. Filip Jurčíček Ph.D., Ústav formální a aplikované lingvistiky
 
 Abstrakt:
 Tato diplomová práce představuje cloudovou platformu pro automatické rozpoznávání řeči, CloudASR,
-  která je postavena na systému pro rozpoznávání řeči Kaldi.
+  která je postavena na systému pro rozpoz-návání řeči Kaldi.
 Platforma podporuje dávkový a online způsob rozpoznávání řeči
-  a také obsahuje anotační prostředí pro přidávání přepisů k~odeslaným nahrávkám.
-Mezi klíčové vlastnosti této platformy patří škálovatelnost, přizpůsobitelnost a jednoduchý proces nasazení.
+  a také obsahuje anotační prostředí pro přidávání přepisů k~odeslaným\linebreak nahrávkám.
+Mezi klíčové vlastnosti této platformy patří škálovatelnost, přizpů-sobitelnost a jednoduchý proces nasazení.
 Provedená měření dokázala,
   že latence platformy je porovnatelná s~latencí Google Speech API
   a přesnost přepisů na omezených doménách může být dokonce lepší.
