--- a/user.tex
+++ b/user.tex
@@ -54,7 +54,7 @@
 	\item Click on the \textbf{Transcribe} link in the top menu.
 	\item Select a worker that you want to manage and click on the corresponding \textbf{Edit description} button.
 	\item
-	    Fill in the name and description of the worker.
+	    Fill in the name and the description of the worker.
 	    Note that you can use html in the description.
 	    You can check your description on a preview at the bottom of the page.
 	\item Save the description with the \textbf{Save} button.
